# dotfiles

./: .bash_aliases  .bash_functions  .bash_profile  .bashrc  .gitignore  .inputrc  .shell_env  .shell_functions  .shellrc  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  CLIPBOARD-RELAY.md  README.md  aerospace.toml  checkout1.code-workspace  checkout2.code-workspace  checkout3.code-workspace  checkout4.code-workspace  click_mouse.ahk  compile_xkb.sh  ghostty_config  hammerspoon.lua  init.sh  init_hammerspoon.lua  init_nvim.lua  inputrc  main.code-workspace  meta_init.sh  move_cursor.ahk  new_settings.json  nvim_init.lua  orchest_plugins.json  rebinds.ahk  scratch.code-workspace  sway_config  sync.sh  toggle.ahk  (+1 more)
services/omnigent-diff-watcher/: README.md  config.toml  pyproject.toml
services/omnigent-diff-watcher/src/omnigent_diff_watcher/: __init__.py  cli.py  domain.py  logic.py  mcp_server.py  omnigent_client.py  phabricator_source.py  repository.py  service.py  settings.py  source_command.py  source_models.py  watcher.py
services/omnigent-diff-watcher/tests/: __init__.py  fake_meta_cli.py  fake_review_source.py  support.py
services/omnigent-diff-watcher/tests/fixtures/: README.md  active.json  committed.json  failing.json  green.json  malformed.json  missing.json  partial_failure.json
services/omnigent-diff-watcher/tests/integration/: test_fake_source.py  test_installed_omnigent_compat.py  test_mcp_stdio.py  test_phabricator_source_process.py  test_service_reconciliation.py  test_sidecar_full_flow.py  test_source_command_failures.py  test_state_recovery.py  test_watcher_state_machine.py
services/omnigent-diff-watcher/tests/unit/: test_logic.py  test_logic_repository.py  test_mcp_server.py  test_omnigent_client.py  test_personal_config.py  test_phabricator_source.py  test_repository.py  test_settings.py  test_source_models.py  test_watcher.py
services/omnigent-google-chat/: .env.example  .gitignore  README.md  pyproject.toml
services/omnigent-google-chat/src/omnigent_google_chat/: __init__.py  __main__.py  app.py  config.py  discovery.py  inbound.py  meta_chat.py  mirror.py  models.py  omnigent.py  phase_zero.py  store.py  text.py
services/omnigent-google-chat/tests/: test_app.py  test_bridge_integration.py  test_config_text.py  test_inbound.py  test_meta_chat.py  test_meta_process.py  test_mirror_discovery.py  test_omnigent.py  test_phase_zero.py  test_store.py
services/omnigent-hub/: README.md  pyproject.toml
services/omnigent-hub/src/omnigent_hub/: __init__.py  cli.py  (+12 more)
services/omnigent-hub/tests/: conftest.py  test_cli.py  test_client_proxy.py  test_client_proxy_module.py  test_handoff_integration.py  test_mac_proxy.py  test_models.py  test_operator_wrapper.py  test_orchestrator.py  test_reconcile.py  test_remote.py  test_runtime.py  test_server_url.py  test_snapshot.py  test_storage.py
(+658 files in other folders)
