[project]
name = "omnigent-diff-watcher"
version = "0.1.0"
description = "Opt-in Phabricator review and CI watcher for Omnigent sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0,<1",
    "mcp>=1.26.0,<2",
    "pydantic>=2.11.0,<3",
]

[project.scripts]
omnigent-diff-watcher = "omnigent_diff_watcher.cli:main"
omnigent-diff-watch-mcp = "omnigent_diff_watcher.mcp_server:main"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.12.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
